changes properties files